first enviroment DAE working

--- a/pendulum_td3.ipynb
+++ b/pendulum_td3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "477916c3-0b81-4728-8af1-92b07e9c40c3",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "d6d3dd60-90e1-4cbd-8804-8aed9ef5b5c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/gym/envs/registration.py:595: UserWarning: \u001b[33mWARN: Overriding environment PendulumDAEEnv-v0\u001b[0m\n",
+      "  logger.warn(f\"Overriding environment {id}\")\n"
+     ]
+    }
+   ],
    "source": [
     "gym.envs.register(\n",
     "     id='PendulumDAEEnv-v0',\n",
